fixed dark mode transitions

--- a/main-dark.css
+++ b/main-dark.css
@@ -94,16 +94,6 @@ body.dark-mode {
     transition: all 0.5s ease-out;
 }
 
-.card.dark-mode {
-    background-color: #212121;
-    color: white;
-    -webkit-transition: all 1s;
-    -moz-transition: all 1s;
-    -ms-transition: all 1s;
-    -o-transition: all 1s;
-    transition: all 1s;
-} 
-
 .jumbotron.dark-mode {
     background-color: rgba(33, 33, 33, 0.5);
     color: white;
@@ -128,6 +118,16 @@ hr.dark-mode {
     border-radius: 10px;
     margin-right: -10px;
     background-color: #3a3a3a3a;
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -ms-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
+}
+
+div.card.dark-mode {
+    background-color: #212121;
+    color: white;
     -webkit-transition: all 0.5s ease-out;
     -moz-transition: all 0.5s ease-out;
     -ms-transition: all 0.5s ease-out;
